name:                directions
version:             0
synopsis:            Cardinal directions
-- description:         
homepage:            https://github.com/fumieval/directions
license:             BSD3
license-file:        LICENSE
author:              Fumiaki Kinoshita
maintainer:          Fumiaki Kinoshita <fumiexcel@gmail.com>
copyright:           Copyright (C) 2014 Fumiaki Kinoshita
category:            Data
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Data.Direction.Four, Data.Direction.Class
  -- other-modules:       
  other-extensions:    ViewPatterns, DeriveDataTypeable
  build-depends:       base == 4.*
  hs-source-dirs:      src
  default-language:    Haskell2010