name:                enumvec
version:             0
synopsis:            Fixed-length vectors on Bounded Enum datatypes
description:         Please see README.md
homepage:            http://github.com/githubuser/enumvec#readme
license:             BSD3
license-file:        LICENSE
author:              Fumiaki Kinoshita
maintainer:          Fumiaki Kinoshita <fumiexcel@gmail.com>
copyright:           2016 Fumiaki Kinoshita
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.EnumVec
  build-depends:       base >= 4.7 && < 5, vector, adjunctions, distributive, hashable
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fumieval/enumvec
