name:                packmap
version:             0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/fumieval/packmap#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.PackMap
  build-depends:       base >= 4.7 && < 5, containers, lens, semigroups, profunctors, witherable
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fumieval/packmap
